[tool.poetry]
name = "ymcli"
version = "0.1.0"
description = ""
authors = ["hikary-dev <tronin371@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yandex-music = "^2.1.1"
npyscreen = "^4.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
